--- a/dkms.conf
+++ b/dkms.conf
@@ -1,5 +1,4 @@
-MAKE="make"
-CLEAN="make clean"
+MAKE="make KERNEL_VERSION=${kernelver}"
 BUILT_MODULE_NAME=zenbook-hid-irq-fix
 PACKAGE_NAME=zenbook-hid-irq-fix
 PACKAGE_VERSION=1.0
